# poc-dj-entities

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
campaigns/: AGENTS.md  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
campaigns/migrations/: 0001_initial.py  0002_alter_setting_campaign.py
entities/: asgi.py  settings.py  urls.py  wsgi.py
